feat: add proper support for file uploads
